# plookup

./: Cargo.toml
src/: kzg10.rs  transcript.rs
src/lookup/: lookup.rs  proof.rs
src/lookup/table/: four_bits.rs  generic.rs  mod.rs
src/multiset/: multiset.rs  multiset_equality.rs  proof.rs  quotient_poly.rs
tests/: lookup.rs
