[package]
name = "plookup"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "2.0.0"
rand = "0.7.2"
rand_core = { version = "0.5", default-features = false }
num-traits = { version = "0.2", default-features = true }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit", branch = "master"}
itertools = "0.8.2"
rand_chacha = "0.2"
rayon = "1.3.0"